   * Teams are now translated localy for all clients (bug: #3676)
 * miscellaneous and bug fixes:
   * Fixed droiding not to make wesnoth think player is observer (bug: #9675)
   * Fixed statitics not add turn data from previus scenarios (bug: #11719)
   * Fixed manager to initialize before gamestate in playcontroller (bug: 11935)
   * Removed persistance from team configuration (bug: #10916)
   * Made automaticaly generated macro reference easier to naviagate and link to
     (patch: #1076)
   * Allow [unit_type] num_traits=0 to override race's num_traits.
   * Small optimization of scrolling and things out of their hexes.
   * Added a command-line parameters "--smallgui" to allow lower resolutions.
   * Missing images are now replaced by a "men-at-work" sign (in debug-mode)
   * Better pathfinding: now always prefer straight path and is also more
     stable between little mouse's moves.
 * Python AI
   * get_variable now allows a default value to be passed to the call. If the
     key is not found, the default value is returned. This is fully backward
     compatible.
   * set_variable exception handling has been fixed to return an exception in
     the current call frame.
   * Many wesnoth module functions now release the python GIL when it is both
     safe to do so and the function call takes long enough where it also
     makes sense. More changes coming.
   * A new global boolean variable, 'restricted' is now set before the user AI
     script is invoked. This variable indicates if it is running inside of
     a restricted python environment or not.
   * A new class of unrestricted scripts are now listed. Previously only scripts which have
     #!WPY at the top are allowed. If only allow safe python scripts is disabled,
     scripts which start with #!UNSAFE_WPY are also shown to users. This allows
     AI authors to specifically target either a restricted or unrestricted environment.