@@ -146,10 +146,7 @@ const token& tokenizer::next_token()
 	case '"':
 		token_.type = token::QSTRING;
 		while (1) {
-			/** Have to use next_char_no_strip 
-			 * because we will break image ifwe do striping
-			 **/
-			next_char_no_strip();
+			next_char();
 
 			if(current_ == EOF) {
 				token_.type = token::UNTERMINATED_QSTRING;
@@ -158,20 +155,11 @@ const token& tokenizer::next_token()
 			if(current_ == '"' && peek_char() != '"')
 				break;
 			if(current_ == '"' && peek_char() == '"')
-				next_char_fast_no_strip();
-			if (current_ == 254 && 
-					(peek_char() == 'l' || peek_char() == 't')) {
-				next_char_fast_no_strip();
-				if ((current_ == 'l' && peek_char() == 'i') || (current_ == 't' && peek_char() == 'e'))
-				{
-					skip_comment();
-					--lineno_;
-					continue;
-				}
-				else
-				{
-					token_.value += 254;
-				}
+				next_char_fast();
+			if (current_ == 254 ) {
+				skip_comment();
+				--lineno_;
+				continue;
 			}
 
 			token_.value += current_;
